samples/_failures_safe/1761130131_65d11d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2345daef.c: In function ‘main’:
./samples/SAFE/__tmp_2345daef.c:195:47: error: ‘MAX’ undeclared (first use in this function)
  195 |     int token_count = tokenize(input, tokens, MAX
      |                                               ^~~
./samples/SAFE/__tmp_2345daef.c:195:47: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_2345daef.c:195:50: error: expected ‘)’ at end of input
  195 |     int token_count = tokenize(input, tokens, MAX
      |                               ~                  ^
      |                                                  )
./samples/SAFE/__tmp_2345daef.c:195:5: error: expected declaration or statement at end of input
  195 |     int token_count = tokenize(input, tokens, MAX
      |     ^~~
